--- a/tootoo-templates/hamburger-css-cms/hamburger-css-cms-2018-07-20.html
+++ b/tootoo-templates/hamburger-css-cms/hamburger-css-cms-2018-07-20.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8" >
 <meta name="viewport" content = "width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" >
-<meta name=description content="basic html template with sliding menu, css selection, Markdown capability and frequently used pages" >
+<meta name=description content="basic html template with sliding menu, markdown capability and frequently used pages" >
 <meta name=keywords content="JavaScript,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2018-07-22" >
-<title>hamburger css cms r1.1</title>
+<meta name = "date" content = "2018-07-16" >
+<title>hamburger bootswatch cms r1.0</title>
 <style>
 /* Copyright 2018 pushMe pullYou authors. MIT License */
 
@@ -19,7 +19,6 @@
 	a:hover, a:focus { background-color: yellow; color: #888; }
 	blockquote, pre { background-color:rgba(240, 240, 240, 0.25 ); padding: 1em }
 	button:hover, input[ type=button ]:hover { background-color: #ccc; color: white }
-	summary { font-weight: bold; }
 
 	#divContainer { height: 100%; margin: 0 0 0 var( --mnu-width ); transition: margin-left .5s; position: relative; }
 	#divContents { height: 100%; left: 0; margin: 0 auto; max-width: 50rem; padding: 1rem; right: 0; }
@@ -29,12 +28,11 @@
 	#hamburger { cursor: pointer; font-size: 2rem; left: calc( var( --mnu-width ) - 4rem );
 		line-height: 2rem; position: fixed; top: 0; transition: left 0.5s; z-index: 10; }
 
-
 	.default { background-color: white; color: #007bff; }
 	.cerulean { background-color: white; color: #2FA4E7; }
 	.cosmo { background-color: white; color: #2780E3; }
-	.cyborg { background-color: #060606; color: #2A9FD6; font-style: italic; }
-	.darkly { background-color: #222; color: #00bc8c; font-style: italic; }
+	.cyborg { background-color: #060606; color: #2A9FD6; }
+	.darkly { background-color: #222; color: #00bc8c; }
 	.flatly { background-color: white; color: #18BC9C; }
 	.journal { background-color: white; color: #EB6864; }
 	.litera { background-color: white; color: #4582EC; }
@@ -46,10 +44,10 @@
 	.sandstone { background-color: white; color: #93C54B; }
 	.simplex { background-color: white; color: #D9230F; }
 	.sketchy { background-color: white; color: #333; }
-	.slate { background-color: #272B30; color: #fff; font-style: italic; }
-	.solar { background-color: #002B36; color: #839496; font-style: italic; }
+	.slate { background-color: #272B30; color: #fff; }
+	.solar { background-color: #002B36; color: #839496; }
 	.spacelab { background-color: white; color: #3399F3; }
-	.superhero { background-color: #2B3E50; color: #DF691A; font-style: italic; }
+	.superhero { background-color: #2B3E50; color: #DF691A; }
 	.united { background-color: white; color: #E95420; }
 	.yeti { background-color: white; color: #008cba; }
 
@@ -71,7 +69,7 @@
 */
 
 </style>
-<link id=css rel="stylesheet" href="" type="text/css" >
+<link id=css rel="stylesheet" type="text/css" >
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/1.8.6/dist/showdown.min.js ></script>
@@ -87,65 +85,52 @@
 
 		<div id = "divExtras" >
 
-			<p><a href="#https://pushme-pullyou.github.io/pages/markdown-help.md" >markdown-help.md</a></p>
+			<p><a href="#../../pages/markdown-help.md" >markdown-help.md</a></p>
 
-			<p><a href="#https://pushme-pullyou.github.io/plugins/iframe-carousel-r1.html" >iframe-carousel-r1.html</a></p>
+			<p><a href="#../../plugins/iframe-carousel-r1.html" >iframe-carousel-r1.html</a></p>
 
-			<p><a href="#https://pushme-pullyou.github.io//plugins/view-github-issues.html" >view-github-issues.html</a></p>
+			<p><a href="#../../plugins/view-github-issues.html" >view-github-issues.html</a></p>
 
-			<p><a href="#https://pushme-pullyou.github.io/tootoo-more/plugins/view-stl.html" >view-stl.html</a></p>
+			<p><a href="#../../tootoo-more/plugins/view-stl.html" >view-stl.html</a></p>
 
-			<p><a href="#https://pushme-pullyou.github.io//utilities/invertocat.png" >invertocat.png</a></p>
+			<p><a href="#../../utilities/invertocat.png" >invertocat.png</a></p>
 
 			<p><a href="https://bootswatch.com" target=_blank >🗗 bootswatch.com</a></p>
 
 		</div>
 
-		<hr>
-
 		<div id= "divFooter" >
 
-			<p>
-				<select id=selTheme onchange=updateCss(this.value); class="form-control" >
-					<optgroup label="Bootswatch Themes">
-						<option class=default value="https://bootswatch.com/_vendor/bootstrap/dist/css/bootstrap.css" >Default</option>
-						<option class=cerulean value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/cerulean/bootstrap.min.css" >Cerulean</option>
-						<option class=cosmo value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/cosmo/bootstrap.min.css" >Cosmo</option>
-						<option class=cyborg title="dark" value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/cyborg/bootstrap.min.css" >Cyborg</option>
-						<option class=darkly title="dark" value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/darkly/bootstrap.min.css" >Darkly</option>
-						<option class=flatly value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/flatly/bootstrap.min.css" >Flatly</option>
-						<option class=journal value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/journal/bootstrap.min.css" >Journal</option>
-						<option class=litera value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/litera/bootstrap.min.css" >Litera</option>
-						<option class=lumen value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/lumen/bootstrap.min.css" >Lumen</option>
-						<option class=lux value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/lux/bootstrap.min.css" >Lux</option>
-						<option class=meteria value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/materia/bootstrap.min.css" >Materia</option>
-						<option class=minty value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/minty/bootstrap.min.css" >Minty</option>
-						<option class=pulse value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/pulse/bootstrap.min.css" >Pulse</option>
-						<option class=sandstone value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/sandstone/bootstrap.min.css" >Sandstone</option>
-						<option class=simplex value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/simplex/bootstrap.min.css" >Simplex</option>
-						<option class=sketchy value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/sketchy/bootstrap.min.css" >Sketchy</option>
-						<option class=slate title="dark" value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/slate/bootstrap.min.css"e >Slate</option>
-						<option class=solar title="dark" value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/solar/bootstrap.min.css" >Solar</option>
-						<option class=spacelab value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/spacelab/bootstrap.min.css" >Spacelab</option>
-						<option class=superhero title="dark" value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/superhero/bootstrap.min.css" >Superhero</option>
-						<option class=united value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/united/bootstrap.min.css" >United</option>
-						<option class=yeti value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/yeti/bootstrap.min.css" >Yeti</option>
-					</optgroup>
-					<optgroup label="Themes from other sources">
-						<option class=material-kit value="https://demos.creative-tim.com/material-kit/assets/css/material-kit.min.css" >Material Kit</option>
-						<option class="initio" value="https://www.gettemplate.com/demo/initio/assets/css/styles.css" >Initio</option>
-						<option class="creative" value="https://blackrockdigital.github.io/startbootstrap-creative/css/creative.min.css" >Creative</option>
-						<option class="cardio" value="https://tympanus.net/Freebies/Cardio/css/cardio.css" >Cardio</option>
-						<option class="magister" value="https://www.gettemplate.com/demo/magister/assets/css/magister.css" >Magister</option>
+			<hr>
 
-						<!--
-							<option class="" value="" ></option>
-						-->
-
-					</optgroup>
-				</select>
-			</p>
-
+			<div>
+				<p>
+					<select id=selTheme onchange=updateCss(this.value); class="form-control" >
+						<option class=default >Default</option>
+						<option class=cerulean >Cerulean</option>
+						<option class=cosmo >Cosmo</option>
+						<option class=cyborg >Cyborg</option>
+						<option class=darkly >Darkly</option>
+						<option class=flatly >Flatly</option>
+						<option class=journal >Journal</option>
+						<option class=litera >Litera</option>
+						<option class=lumen >Lumen</option>
+						<option class=lux >Lux</option>
+						<option class=meteria >Materia</option>
+						<option class=minty >Minty</option>
+						<option class=pulse >Pulse</option>
+						<option class=sandstone >Sandstone</option>
+						<option class=simplex >Simplex</option>
+						<option class=sketchy >Sketchy</option>
+						<option class=slate >Slate</option>
+						<option class=solar >Solar</option>
+						<option class=spacelab >Spacelab</option>
+						<option class=superhero >Superhero</option>
+						<option class=united >United</option>
+						<option class=yeti >Yeti</option>
+					</select>
+				</p>
+			</div>
 
 			<div title='Me want too!' ><a href=#../../pages/about-this-cms.md >About this CMS</a></div>
 			<div title='What is this stuff?' ><a href=#../../pages/coding-style.md >Coding style</a></div>
@@ -173,34 +158,35 @@
 	<button id = "hamburger" class = "btn btn-primary" onclick=toggleNav(); > slide &#9776;  </button>
 
 <script>
-
 // https://github.com/showdownjs/showdown << check for latest rev from time to time 1.8.6 2018-07-02
 // jshint esversion: 6
 
 
-const user = 'pushme-pullyou';
-const repo = '/pushme-pullyou.github.io';
-const pathRepo = '';
-const branch = '/master/'
+	const user = 'pushme-pullyou';
+	const repo = '/pushme-pullyou.github.io';
+	const pathRepo = '';
+	const branch = '/master/'
 
-const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
-const urlGitHubSource = 'https://github.com/' + user + repo;
-const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo;
+	const uriDefaultFile = 'README.md';
 
-//const urlGitHubPage = location.href.includes( '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
-const urlGitHubPage  = 'https://rawgit.com/' + user + repo + branch;
-//console.log( 'urlGitHubPage', urlGitHubPage );
+	const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
+	const urlGitHubSource = 'https://github.com/' + user + repo;
+	const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo;
+
+	//const urlGitHubPage = location.href.includes( '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
+	const urlGitHubPage  = 'https://rawgit.com/' + user + repo + branch;
+		//console.log( 'urlGitHubPage', urlGitHubPage );
 
 
-//	location.hash = '../README.md';
-const uriDefaultFile = 'README.md';
-const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-css-cms";
-
-const themeName = localStorage.getItem( 'themeName' ) || 'https://bootswatch.com/_vendor/bootstrap/dist/css/bootstrap.css';
-selTheme.value = themeName ;
+const themeName = localStorage.getItem( 'themeName' );
+selTheme.value = themeName ? themeName : 'Cerulean' ;
 
 let xDown = null;
 let yDown = null;
+
+//	let defaultFile = 'index.html';
+//	location.hash = '../README.md';
+//let uriDefaultFile = 'README.md';
 
 const txt = 'lorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?';
 
@@ -215,23 +201,21 @@ function init() {
 
 	divTitle.innerHTML =
 	`
-		<div class="" >
+		<div class="">
 			<a class="breadcrumb-item" href = "../index.html" target="_top" >repo</a>
 			<a class="breadcrumb-item" href= "./index.html" target="_top" style=font-size:24px; >&#x2302;</a>
 		</div>
 
 		<h2>
-			<a href=${ urlSourceCode } target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
-			<a href = "" title = "Click to reload this page" >${document.title}</a>
+			<a href="https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-bootswatch" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
+			<a href = "" >${ document.title }</a>
 		</h2>
 
 		<p>${ document.head.querySelector( '[name=description]' ).content }</p>
 	`;
 
-	divMenuItems.innerHTML += `<details><summary>text 1</summary>${ txt }</details>
-		<details><summary>text 2</summary>${ txt }</details><hr>`;
+	divMenuItems.innerHTML += '<details>' + txt + '</details><details>' + txt + '</detaila>';
 
-	// Swipe events
 	document.addEventListener( 'touchstart', onTouchStart, false );
 	document.addEventListener( 'touchmove', onTouchMove, false );
 
@@ -245,8 +229,35 @@ function init() {
 
 function updateCss( value ) {
 
-	css.href = value;
+	css.href = value === 'Default' ? 'https://bootswatch.com/_vendor/bootstrap/dist/css/bootstrap.css' :
+		`https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/${ value.toLowerCase() }/bootstrap.min.css`;
+
 	localStorage.setItem( 'themeName', value );
+
+}
+
+
+
+function toggleNav() {
+
+	const width = getComputedStyle(document.documentElement).getPropertyValue( '--mnu-width' ).trim();
+
+	if ( !divMenu.style.width || divMenu.style.width === width ) {
+
+		divMenu.style.width = '0';
+		divMenu.style.padding = '0';
+		hamburger.style.left = '-75px';
+		divContainer.style.marginLeft = '0';
+
+	} else {
+
+		divMenu.style.width = width;
+		//divMenu.style.padding = '30px 10px 0 10px';
+		divMenu.style.padding = '1rem';
+		hamburger.style.left = 'calc( var( --mnu-width ) - 4rem )';
+		divContainer.style.marginLeft = width;
+
+	}
 
 }
 
@@ -259,7 +270,7 @@ function onHashChange() {
 
 	const crumbs = url.slice( urlGitHubPage.length );
 	const pathCurrent = crumbs.lastIndexOf( '/' ) > 0 ? crumbs.slice( 0, crumbs.lastIndexOf( '/' ) ) : '';
-	//console.log( 'pathCurrent',  pathCurrent );
+		//console.log( 'pathCurrent',  pathCurrent );
 
 	setMenuGitHubPathFileNames( pathCurrent );
 
@@ -275,7 +286,7 @@ function onHashChange() {
 
 		divContents.innerHTML = `<iframe src=${ url } height=100% width=100% ></iframe>`;
 
-	} else if ( ulc.endsWith( '.gif' ) || ulc.endsWith( '.png' ) || ulc.endsWith( '.jpg' ) || ulc.endsWith( '.ico' ) || ulc.endsWith( '.svg' ) ) {
+	} else if ( ulc.endsWith( '.gif' ) || ulc.endsWith( '.png' ) || ulc.endsWith( '.jpg' ) || ulc.endsWith( '.svg' )) {
 
 		divContents.innerHTML = `<img src=${ url } >`;
 
@@ -284,6 +295,32 @@ function onHashChange() {
 		requestFile( urlGitHubPage + url, callbackToTextarea );
 
 	}
+
+}
+
+
+
+function callbackMarkdown( xhr ){
+
+	showdown.setFlavor('github');
+	const converter = new showdown.Converter();
+	const response = xhr.target.response;
+	const html = converter.makeHtml( response );
+
+	divContents.style.maxWidth = '800px';
+	document.body.overflow = '';
+	divContents.innerHTML = html;
+	window.scrollTo( 0, 0 );
+
+}
+
+
+
+function callbackToTextarea( xhr ){
+
+	const response = xhr.target.response;
+
+	divContents.innerHTML = `<textarea style=height:100%;width:100%; >${ response }</textarea>`;
 
 }
 
@@ -298,32 +335,6 @@ function requestFile( url, callback ) {
 	//xhr.onprogress = function( xhr ) { console.log(  'bytes loaded: ' + xhr.loaded.toLocaleString() ) }; /// or something
 	xhr.onload = callback;
 	xhr.send( null );
-
-}
-
-
-
-function callbackMarkdown( xhr ){
-
-	showdown.setFlavor('github');
-	const converter = new showdown.Converter();
-	const response = xhr.target.response;
-	const html = converter.makeHtml( response );
-
-	//divContents.style.maxWidth = '800px';
-	document.body.overflow = '';
-	divContents.innerHTML = html;
-	window.scrollTo( 0, 0 );
-
-}
-
-
-
-function callbackToTextarea( xhr ){
-
-	const response = xhr.target.response;
-
-	divContents.innerHTML = `<textarea style=height:100%;width:100%; >${ response }</textarea>`;
 
 }
 
@@ -391,31 +402,6 @@ function onTouchMove(event) {
 
 
 
-function toggleNav() {
-
-	const width = getComputedStyle(document.documentElement).getPropertyValue( '--mnu-width' ).trim();
-
-	if ( !divMenu.style.width || divMenu.style.width === width ) {
-
-		divMenu.style.width = '0';
-		divMenu.style.padding = '0';
-		hamburger.style.left = '-75px';
-		divContainer.style.marginLeft = '0';
-
-	} else {
-
-		divMenu.style.width = width;
-		//divMenu.style.padding = '30px 10px 0 10px';
-		divMenu.style.padding = '1rem';
-		hamburger.style.left = 'calc( var( --mnu-width ) - 4rem )';
-		divContainer.style.marginLeft = width;
-
-	}
-
-}
-
-
-
 //////////
 
 
@@ -427,6 +413,35 @@ function setMenuGitHubPathFileNames( path = '' ) {
 	requestFile( url, callbackGitHubPathFileNames );
 
 	setBreadcrumbs( path );
+
+}
+
+
+
+function setBreadcrumbs( path ) {
+
+	let txt =
+		'<b>' +
+			'<a href=JavaScript:setMenuGitHubPathFilNames(); >' +
+
+				( pathRepo ? pathRepo : '<span style=font-size:24px >&#x2302</span>' ) +
+
+			'</a> &raquo; ' +
+		'</b>';
+
+	const folders = path ? path.split( '/' ) : [] ;
+
+	let str = '';
+
+	for ( let folder of folders ) {
+
+		str += folder + '/';
+
+		txt += '<b><a href=JavaScript:setMenuGitHubPathFilNames("' + str.slice( 0, -1 ) + '"); >' + folder + '</a> &raquo; </b>';
+
+	}
+
+	divBreadcrumbs.innerHTML = txt;
 
 }
 
@@ -452,7 +467,7 @@ function callbackGitHubPathFileNames( xhr ) {
 
 			txt +=
 				'<div style=margin-bottom:8px; >' +
-					'<a href=JavaScript:setMenuGitHubPathFileNames("' + item.path.slice( len )  + '"); >&#x1f4c1; ' +
+					'<a href=JavaScript:setMenuGitHubPathFilNames("' + item.path.slice( len )  + '"); >&#x1f4c1; ' +
 						item.name  +
 					'</a>' +
 				'</div>' +
@@ -504,42 +519,6 @@ function callbackGitHubPathFileNames( xhr ) {
 }
 
 
-
-function setBreadcrumbs( path ) {
-
-	let txt =
-		'<b>' +
-			'<a href=JavaScript:setMenuGitHubPathFileNames(); >' +
-
-				( pathRepo ? pathRepo : '<span style=font-size:24px >&#x2302</span>' ) +
-
-			'</a> &raquo; ' +
-		'</b>';
-
-	const folders = path ? path.split( '/' ) : [] ;
-
-	let str = '';
-
-	for ( let folder of folders ) {
-
-		str += folder + '/';
-
-		txt += '<b><a href=JavaScript:setMenuGitHubPathFilNames("' + str.slice( 0, -1 ) + '"); >' + folder + '</a> &raquo; </b>';
-
-	}
-
-	divBreadcrumbs.innerHTML = txt;
-
-}
-
-
-
-function setGPATStorage() {
-
-	const GitHubPersonalAccessToken = inpGitHubPersonalAccessToken.value;
-	localStorage.setItem('GitHubPersonalAccessToken', GitHubPersonalAccessToken );
-
-}
 </script>
 </body>
 </html>
