--- a/tootoo-templates/hamburger-css/hamburger-css.html
+++ b/tootoo-templates/hamburger-css/hamburger-css.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content = "width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" >
 <meta name=description content="basic html template with sliding menu, css selection, Markdown capability and frequently used pages" >
 <meta name=keywords content="JavaScript,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2018-07-20" >
-<title>hamburger css r1.0</title>
+<meta name = "date" content = "2018-07-22" >
+<title>hamburger css r1.1</title>
 <style>
 /* Copyright 2018 pushMe pullYou authors. MIT License */
 
@@ -19,6 +19,7 @@
 	a:hover, a:focus { background-color: yellow; color: #888; }
 	blockquote, pre { background-color:rgba(240, 240, 240, 0.25 ); padding: 1em }
 	button:hover, input[ type=button ]:hover { background-color: #ccc; color: white }
+	summary { font-weight: bold; }
 
 	#divContainer { height: 100%; margin: 0 0 0 var( --mnu-width ); transition: margin-left .5s; position: relative; }
 	#divContents { height: 100%; left: 0; margin: 0 auto; max-width: 50rem; padding: 1rem; right: 0; }
@@ -28,11 +29,14 @@
 	#hamburger { cursor: pointer; font-size: 2rem; left: calc( var( --mnu-width ) - 4rem );
 		line-height: 2rem; position: fixed; top: 0; transition: left 0.5s; z-index: 10; }
 
+
+	.dragDropArea { border: 1px dashed gray; box-sizing: border-box; padding: 10px; }
+
 	.default { background-color: white; color: #007bff; }
 	.cerulean { background-color: white; color: #2FA4E7; }
 	.cosmo { background-color: white; color: #2780E3; }
-	.cyborg { background-color: #060606; color: #2A9FD6; }
-	.darkly { background-color: #222; color: #00bc8c; }
+	.cyborg { background-color: #060606; color: #2A9FD6; font-style: italic; }
+	.darkly { background-color: #222; color: #00bc8c; font-style: italic; }
 	.flatly { background-color: white; color: #18BC9C; }
 	.journal { background-color: white; color: #EB6864; }
 	.litera { background-color: white; color: #4582EC; }
@@ -44,10 +48,10 @@
 	.sandstone { background-color: white; color: #93C54B; }
 	.simplex { background-color: white; color: #D9230F; }
 	.sketchy { background-color: white; color: #333; }
-	.slate { background-color: #272B30; color: #fff; }
-	.solar { background-color: #002B36; color: #839496; }
+	.slate { background-color: #272B30; color: #fff; font-style: italic; }
+	.solar { background-color: #002B36; color: #839496; font-style: italic; }
 	.spacelab { background-color: white; color: #3399F3; }
-	.superhero { background-color: #2B3E50; color: #DF691A; }
+	.superhero { background-color: #2B3E50; color: #DF691A; font-style: italic; }
 	.united { background-color: white; color: #E95420; }
 	.yeti { background-color: white; color: #008cba; }
 
@@ -58,7 +62,7 @@
 
 	button, input[ type=button ] { background-color: #ddd; border: none; color: var( --mnu-color ); cursor: pointer; padding: 3px 20px; }
 
-	iframe { /*border: none; * width: 100%; }
+	iframe { border: none; width: 100%; }
 
 	input[ type = range ] { -webkit-appearance: none; -moz-appearance: none; background-color: #ddd; width: 100%; }
 	input[ type = range ]::-moz-range-thumb { background-color: #888; border-radius: 0; width: 10px; }
@@ -79,19 +83,21 @@
 
 		<div id = "divTitle" ></div>
 
-		<div id = "divMenuItems" >
+		<div id = "divMenuItems" ></div>
 
-			<p><a href="#../../pages/markdown-help.md" >markdown-help.md</a></p>
+		<div id = "divExtras" >
 
-			<p><a href="#../../plugins/iframe-carousel-r1.html" >iframe-carousel-r1.html</a></p>
+			<p><a href="#https://pushme-pullyou.github.io/pages/markdown-help.md" >markdown-help.md</a></p>
 
-			<p><a href="#../../plugins/view-github-issues.html" >view-github-issues.html</a></p>
+			<p><a href="#https://pushme-pullyou.github.io/plugins/iframe-carousel-r1.html" >iframe-carousel-r1.html</a></p>
 
-			<p><a href="#../../tootoo-more/plugins/view-stl.html" >view-stl.html</a></p>
+			<p><a href="#https://pushme-pullyou.github.io//plugins/view-github-issues.html" >view-github-issues.html</a></p>
 
-			<p><a href="#../../utilities/invertocat.png" >invertocat.png</a></p>
+			<p><a href="#https://pushme-pullyou.github.io/tootoo-more/plugins/view-stl.html" >view-stl.html</a></p>
 
-			<p><a href="https://bootswatch.com" target=_blank >bootswatch.com 🗗</a></p>
+			<p><a href="#https://pushme-pullyou.github.io//utilities/invertocat.png" >invertocat.png</a></p>
+
+			<p><a href="https://bootswatch.com" target=_blank >🗗 bootswatch.com</a></p>
 
 		</div>
 
@@ -105,8 +111,8 @@
 						<option class=default value="https://bootswatch.com/_vendor/bootstrap/dist/css/bootstrap.css" >Default</option>
 						<option class=cerulean value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/cerulean/bootstrap.min.css" >Cerulean</option>
 						<option class=cosmo value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/cosmo/bootstrap.min.css" >Cosmo</option>
-						<option class=cyborg value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/cyborg/bootstrap.min.css" >Cyborg</option>
-						<option class=darkly value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/darkly/bootstrap.min.css" >Darkly</option>
+						<option class=cyborg title="dark" value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/cyborg/bootstrap.min.css" >Cyborg</option>
+						<option class=darkly title="dark" value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/darkly/bootstrap.min.css" >Darkly</option>
 						<option class=flatly value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/flatly/bootstrap.min.css" >Flatly</option>
 						<option class=journal value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/journal/bootstrap.min.css" >Journal</option>
 						<option class=litera value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/litera/bootstrap.min.css" >Litera</option>
@@ -118,10 +124,10 @@
 						<option class=sandstone value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/sandstone/bootstrap.min.css" >Sandstone</option>
 						<option class=simplex value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/simplex/bootstrap.min.css" >Simplex</option>
 						<option class=sketchy value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/sketchy/bootstrap.min.css" >Sketchy</option>
-						<option class=slat value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/slate/bootstrap.min.css"e >Slate</option>
-						<option class=solar value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/solar/bootstrap.min.css" >Solar</option>
+						<option class=slate title="dark" value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/slate/bootstrap.min.css"e >Slate</option>
+						<option class=solar title="dark" value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/solar/bootstrap.min.css" >Solar</option>
 						<option class=spacelab value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/spacelab/bootstrap.min.css" >Spacelab</option>
-						<option class=superhero value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/superhero/bootstrap.min.css" >Superhero</option>
+						<option class=superhero title="dark" value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/superhero/bootstrap.min.css" >Superhero</option>
 						<option class=united value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/united/bootstrap.min.css" >United</option>
 						<option class=yeti value="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/yeti/bootstrap.min.css" >Yeti</option>
 					</optgroup>
@@ -140,14 +146,23 @@
 				</select>
 			</p>
 
+			<div id=dragDropArea class=dragDropArea >
 
+				Drag & drop files or URLs into this box
+				or <input type = "file" id = "inpFile" class="form-control-file" onchange="openFile(this);" >
+
+			</div>
+
+			<div title='Me want too!' ><a href=#../../pages/about-this-cms.md >About this CMS</a></div>
+			<div title='What is this stuff?' ><a href=#../../pages/coding-style.md >Coding style</a></div>
 			<div title='many thanks!' ><a href=#../../pages/credits.md >Credits</a></div>
-			<div><a href=#../../pages/code-of-conduct.md >Code of Conduct</a></div>
+			<div><a href=#../../pages/code-of-conduct.md >Code of conduct</a></div>
 			<div><a href=#../../pages/contributing.md >Contributing</a></div>
 			<div><a href=#../../pages/license.md >License</a></div>
-			<div><a href=#../../pages/markdown-help.md >Markdown Help</a></div>
+			<div><a href=#../../pages/markdown-help.md >Markdown help</a></div>
+			<div><a title='Need help' href=https://github.com/pushme-pullyou/pushme-pullyou.github.io/issues target=_blank >🗗 GitHub Issues</a></div>
 			<div><a href="javascript:( function(){ var script=document.createElement('script');script.onload=function(){var stats=new Stats();document.body.appendChild(stats.dom);requestAnimationFrame(function loop(){stats.update();requestAnimationFrame(loop)});};script.src='https://rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);})()" title="Mr.doob's Stats.js appear in top left corner" >Show frames/second statistics</a></div>
-			<div><a href="https://api.github.com/rate_limit" target=_blank title='If menu stops appearing, it is likely due to too many API calls' >View GitHub API Rate Limits</a></div>
+			<div><a href="https://api.github.com/rate_limit" title='If menu stops appearing, it is likely due to too many API calls' target=_blank >View GitHub API rate limits</a></div>
 
 			<h1 onclick=divMenu.scrollTop=0; style=cursor:pointer;text-align:center; title='go to top of page' > &#x2766; </h1>
 
@@ -168,15 +183,16 @@
 // https://github.com/showdownjs/showdown << check for latest rev from time to time 1.8.6 2018-07-02
 // jshint esversion: 6
 
+
+//	location.hash = '../README.md';
+const uriDefaultFile = 'README.md';
+const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-css";
+
 const themeName = localStorage.getItem( 'themeName' ) || 'https://bootswatch.com/_vendor/bootstrap/dist/css/bootstrap.css';
 selTheme.value = themeName ;
 
 let xDown = null;
 let yDown = null;
-
-//	let defaultFile = 'index.html';
-//	location.hash = '../README.md';
-let uriDefaultFile = 'README.md';
 
 const txt = 'lorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?';
 
@@ -197,14 +213,18 @@ function init() {
 		</div>
 
 		<h2>
-			<a href="https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-bootswatch" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
-			<a href = "" >${ document.title }</a>
+			<a href=${ urlSourceCode } target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
+			<a href = "" title = "Click to reload this page" >${document.title}</a>
 		</h2>
 
 		<p>${ document.head.querySelector( '[name=description]' ).content }</p>
 	`;
 
-	divMenuItems.innerHTML += '<details>' + txt + '</details><details>' + txt + '</detaila>';
+	divMenuItems.innerHTML += `<details><summary>text 1</summary>${ txt }</details>
+		<details><summary>text 2</summary>${ txt }</details><hr>`;
+
+	dragDropArea.addEventListener( "dragover", function( event ){ event.preventDefault(); }, true );
+	dragDropArea.addEventListener( 'drop', onDrop, false );
 
 	// Swipe events
 	document.addEventListener( 'touchstart', onTouchStart, false );
@@ -220,9 +240,7 @@ function init() {
 
 function updateCss( value ) {
 
-	css.href = value; // === 'Default' ? 'https://bootswatch.com/_vendor/bootstrap/dist/css/bootstrap.css' :
-		//`https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/${ value.toLowerCase() }/bootstrap.min.css`;
-
+	css.href = value;
 	localStorage.setItem( 'themeName', value );
 
 }
@@ -298,6 +316,69 @@ function callbackToTextarea( xhr ){
 }
 
 
+
+function onDrop( event ) {
+
+	console.log( 'event', event );
+
+	const iframeUrl = event.dataTransfer.getData( 'URL' );
+
+	if ( iframeUrl ) {
+
+		location.hash = iframeUrl;
+
+	} else {
+
+		var file = event.dataTransfer.files[0];
+			// can get the name of the file with file.name
+		console.log(file.name);
+		openFile( event.dataTransfer );
+
+		//console.log( 'ed', event.dataTransfer );
+
+	}
+
+	event.preventDefault();
+
+};
+
+
+	function openFile( files ) {
+
+		fileAttributes = files.files[ 0 ];
+		//console.log( 'file', files.files[ 0 ] );
+
+		const reader = new FileReader();
+		//reader.onprogress = onRequestFileProgress;
+		reader.onload = function( event ) {
+
+			//console.log( 'reader', reader );
+
+			showdown.setFlavor('github');
+			const converter = new showdown.Converter();
+			const html = converter.makeHtml( reader.result );
+
+			divContents.style.maxWidth = '800px';
+			document.body.overflow = '';
+			divContents.innerHTML = html;
+			window.scrollTo( 0, 0 );
+
+		};
+
+		reader.readAsText( files.files[ 0 ] );
+
+		function onRequestFileProgress( event ) {
+
+			divLog.innerHTML =
+				fileAttributes.name + ' bytes loaded: ' + event.loaded.toLocaleString() +
+				//( event.lengthComputable ? ' of ' + event.total.toLocaleString() : '' ) +
+			'';
+
+		}
+
+		};
+
+//////////
 
 function onTouchStart( event ) {
 
